--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -287,7 +287,7 @@
     "    movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)\n",
     "\n",
     "    #database\n",
-    "    db_password = \"Bankai123@\"\n",
+    "    db_password = \"\"\n",
     "    #\"postgres://[user]:[password]@[location]:[port]/[database]\"\n",
     "    db_string = f\"postgres://postgres:{db_password}@127.0.0.1:57126/movie_data\"\n",
     "\n",
